Add basic and premium prognosis, possibility to upgrade

--- a/backend/quickmedicalcare/src/main/resources/application.properties
+++ b/backend/quickmedicalcare/src/main/resources/application.properties
@@ -7,6 +7,8 @@ spring.datasource.public.jdbc-url=jdbc:postgresql://localhost:5432/public_db
 spring.datasource.public.username=public_user
 spring.datasource.public.password=public_password
 spring.jpa.properties.hibernate.dialect.public=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.public.hibernate.ddl-auto=create-drop
+#spring.jpa.public.show-sql=true
 
 
 # MedicalDataDatabase connection
@@ -14,6 +16,8 @@ spring.datasource.medical.jdbc-url=jdbc:postgresql://localhost:5433/medical_db
 spring.datasource.medical.username=medical_user
 spring.datasource.medical.password=medical_password
 spring.jpa.properties.hibernate.dialect.medical=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.medical.hibernate.ddl-auto=create-drop
+#spring.jpa.medical.show-sql=true
 
 
 # CorrelationDataDatabase connection
@@ -21,11 +25,15 @@ spring.datasource.correlation.jdbc-url=jdbc:postgresql://localhost:5434/correlat
 spring.datasource.correlation.username=correlation_user
 spring.datasource.correlation.password=correlation_password
 spring.jpa.properties.hibernate.dialect.history=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.correlation.hibernate.ddl-auto=create-drop
+#spring.jpa.correlation.show-sql=true
+
 
 # Hibernate dialect pentru PostgreSQL
 # spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
-
+spring.jpa.properties.hibernate.hbm2ddl.auto=create-drop
 # DDL-auto
-spring.jpa.hibernate.ddl-auto=update
-spring.datasource.initialize=false
+#spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
+# spring.datasource.initialize=false
