--- a/frontend/quick_medical_care/pubspec.yaml
+++ b/frontend/quick_medical_care/pubspec.yaml
@@ -34,7 +34,7 @@ dependencies:
   google_fonts: ^6.2.1
   flutter_secure_storage: ^9.0.0
   shared_preferences: ^2.5.3
-
+  loader_overlay: ^4.0.4
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
